--- a/src/blogCustomisation.css
+++ b/src/blogCustomisation.css
@@ -1,3 +1,17 @@
+.header--blog {
+  background-position: 100% 0;
+  background-size:
+    calc(var(--header-image-aspect-ratio, 4.51) * var(--header-viewport-big-height, 300px))
+    var(--header-viewport-big-height, 300px);
+}
+
+.header--blog .header__mobile-image {
+  background-position: 0 0;
+  background-size:
+    100vw
+    calc(100vw / var(--header-mobile-image-aspect-ratio, 0.55));
+}
+
 .header__additional-element {
   margin: 0;
   color: var(--header__additional-element-color, var(--color-thimphu));
@@ -31,19 +45,88 @@
 
 /* stylelint-disable selector-class-pattern */
 
+/* democracyinamerica */
+
 .header--blog21003976 {
   background-color: #004388;
-  background-position: 100% 0;
-  background-size:
-    calc(var(--header-image-aspect-ratio, 4.51) * var(--header-viewport-big-height, 300px))
-    var(--header-viewport-big-height, 300px);
 }
 
-.header--blog21003976 .header__mobile-image {
-  background-position: 0 0;
-  background-size:
-    100vw
-    calc(100vw / var(--header-mobile-image-aspect-ratio, 0.55));
+/* bagehot */
+
+.header--blog21003990 {
+  background-color: #b51915;
+}
+
+/* buttonwood */
+
+.header--blog21003991 {
+  background-color: #bfe7f1;
+}
+
+.header--blog21003991 .header__title,
+.header--blog21003991 .header__title-link,
+.header--blog21003991 .header__text {
+  color: var(--color-beijing, #121212);
+}
+
+/* economist-explains */
+
+.header--blog21573751 {
+  background-color: #916caf;
+}
+
+/* erasmus */
+
+.header--blog21572045 {
+  background-color: #bd902d;
+}
+
+.header--blog21572045 .header__title,
+.header--blog21572045 .header__title-link,
+.header--blog21572045 .header__text {
+  color: var(--color-beijing, #121212);
+}
+
+/* freeexchange */
+
+.header--blog21003975 {
+  background-color: #695f4b;
+}
+
+/* gametheory */
+
+.header--blog21528117 {
+  background-color: #5e9732;
+}
+
+/* graphicdetail */
+
+.header--blog21011894 {
+  background-color: #5f95b8;
+}
+
+/* gulliver */
+
+.header--blog21003986 {
+  background-color: #5ac5c4;
+}
+
+.header--blog21003986 .header__title,
+.header--blog21003986 .header__title-link,
+.header--blog21003986 .header__text {
+  color: var(--color-beijing, #121212);
+}
+
+/* prospero */
+
+.header--blog21008659 {
+  background-color: #ece8e1;
+}
+
+.header--blog21008659 .header__title,
+.header--blog21008659 .header__title-link,
+.header--blog21008659 .header__text {
+  color: var(--color-beijing, #121212);
 }
 
 /* stylelint-enable selector-class-pattern */
