--- a/src/index.css
+++ b/src/index.css
@@ -37,11 +37,10 @@
   margin: 0 auto;
 
   @media (--header-viewport-small) {
-    height: var(--header-height, 300px);
     padding:
-      var(--header-padding-top, var(--grid-spacing-hedgehog))
+      var(--header-padding-top, 70vw)
       var(--grid-gutter-m)
-      var(--header-padding-bottom, 0);
+      var(--header-padding-bottom, var(--grid-spacing-donkey));
   }
 
   @media (--header-viewport-big) {
@@ -97,7 +96,7 @@
 
     @media (--header-viewport-small) {
       padding:
-        var(--header__title-padding-top, var(--grid-spacing-rabbit))
+        var(--header__title-padding-top, var(--grid-spacing-mouse))
         var(--header__title-padding-v, 15%)
         var(--header__title-padding-bottom, var(--grid-spacing-fox));
     }
@@ -117,8 +116,8 @@
   margin-bottom: var(--grid-spacing-mouse);
   padding:
     var(--header__flytitle-padding-v, var(--grid-spacing-mouse))
-    var(--header__flytitle-padding-h, var(--grid-spacing-fox));
-  padding-bottom: var(--header__flytitle-padding-bottom, 0);
+    var(--header__flytitle-padding-h, var(--grid-spacing-fox))
+    var(--header__flytitle-padding-v, var(--grid-spacing-mouse));
   color: var(--header__flytitle-color, var(--color-economist));
   font-size: var(--text-size-step--1);
   font-weight: normal;
