publish: Merge pull request #43 from economist-components/greenkeeper-eslint-2.7.0
generated from commit bc2fe0e38e8e3a2ebfb48504d9236a407a77f47f

--- a/bundle.css
+++ b/bundle.css
@@ -223,6 +223,7 @@ body {
 /**
  * Css grid variables
  */
+/* stylelint-disable number-max-precision */
 .header {
   position: relative;
   font-family: 'EconSans', Tahoma, sans-serif;
