publish: Merge pull request #56 from economist-components/greenkeeper-ghooks-1.2.1
generated from commit 131891678a0921d096ae1e9d4055612a3b095e67

--- a/bundle.css
+++ b/bundle.css
@@ -128,47 +128,69 @@
 .header--blog-prospero .header__text {
   color: #121212;
 }
+/* stylelint-disable custom-property-pattern, number-max-precision */
 @font-face {
-  font-family: "EconSans";
+  font-family: EconSans;
   font-weight: 300;
-  src: url('/assets/ecosans-lig.woff2') format('woff2'), /* Super Modern Browsers */
-  url('/assets/ecosans-lig.woff') format('woff'); /* Pretty Modern Browsers */
+  src:
+    /* Super Modern Browsers */
+    url('/assets/ecosans-lig.woff2') format('woff2'),
+    /* Pretty Modern Browsers */
+    url('/assets/ecosans-lig.woff') format('woff');
 }
 @font-face {
-  font-family: "EconSans";
+  font-family: EconSans;
   font-style: normal;
-  src: url('/assets/ecosans-reg.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/assets/ecosans-reg.woff') format('woff'); /* Pretty Modern Browsers */
+  src:
+    /* Super Modern Browsers */
+    url('/assets/ecosans-reg.woff2') format('woff2'),
+    /* Pretty Modern Browsers */
+    url('/assets/ecosans-reg.woff') format('woff');
 }
 @font-face {
-  font-family: "EconSans";
+  font-family: EconSans;
   font-weight: 700;
-  src: url('/assets/ecosans-bol.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/assets/ecosans-bol.woff') format('woff'); /* Pretty Modern Browsers */
+  src:
+    /* Super Modern Browsers */
+    url('/assets/ecosans-bol.woff2') format('woff2'),
+    /* Pretty Modern Browsers */
+    url('/assets/ecosans-bol.woff') format('woff');
 }
 @font-face {
-  font-family: "EconSans";
+  font-family: EconSans;
   font-style: italic;
-  src: url('/assets/ecosans-ita.woff2') format('woff2'), /* Super Modern Browsers */
-  url('/assets/ecosans-ita.woff') format('woff'); /* Pretty Modern Browsers */
+  src:
+    /* Super Modern Browsers */
+    url('/assets/ecosans-ita.woff2') format('woff2'),
+    /* Pretty Modern Browsers */
+    url('/assets/ecosans-ita.woff') format('woff');
 }
 @font-face {
-  font-family: "MiloSerifPro";
+  font-family: MiloSerifPro;
   font-style: normal;
-  src: url('/assets/ecoserif-reg.woff2') format('woff2'), /* Super Modern Browsers */
-  url('/assets/ecoserif-reg.woff') format('woff'); /* Pretty Modern Browsers */
+  src:
+    /* Super Modern Browsers */
+    url('/assets/ecoserif-reg.woff2') format('woff2'),
+    /* Pretty Modern Browsers */
+    url('/assets/ecoserif-reg.woff') format('woff');
 }
 @font-face {
-  font-family: "MiloSerifPro";
+  font-family: MiloSerifPro;
   font-style: italic;
-  src: url('/assets/ecoserif-ita.woff2') format('woff2'), /* Super Modern Browsers */
-  url('/assets/ecoserif-ita.woff') format('woff'); /* Pretty Modern Browsers */
+  src:
+    /* Super Modern Browsers */
+    url('/assets/ecoserif-ita.woff2') format('woff2'),
+    /* Pretty Modern Browsers */
+    url('/assets/ecoserif-ita.woff') format('woff');
 }
 @font-face {
-  font-family: "MiloSerifPro";
+  font-family: MiloSerifPro;
   font-weight: 500;
-  src: url('/assets/ecoserif-med.woff2') format('woff2'), /* Super Modern Browsers */
-  url('/assets/ecoserif-med.woff') format('woff'); /* Pretty Modern Browsers */
+  src:
+    /* Super Modern Browsers */
+    url('/assets/ecoserif-med.woff2') format('woff2'),
+    /* Pretty Modern Browsers */
+    url('/assets/ecoserif-med.woff') format('woff');
 }
 /**
  * Modular scale for type.
@@ -204,9 +226,10 @@
 
   /* Font: FF Milo Serif OT Medium */
 }
+/* stylelint-disable selector-no-type */
 html {
-  line-height: 1.35;
   font-size: 18px;
+  line-height: 1.35;
 }
 @media screen and (min-width: 500px) {
   html {
@@ -214,8 +237,8 @@ html {
   }
 }
 body {
-  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 }
 /**
  * Colors
@@ -241,7 +264,7 @@ body {
 }
 .header__additional-element {
   margin: 0;
-  color: #FFFFFF
+  color: #fff
 }
 @media (max-width: 35.999rem) {
   .header__additional-element {
@@ -269,9 +292,9 @@ body {
   }
   }
 .header__additional-element .Icon {
-  background: #FFFFFF;
+  background: #fff;
   border-radius: 50%;
-  fill: #3E51B5;
+  fill: #3e51b5;
 }
 .header__wrapper {
   max-width: 1190px;
@@ -306,7 +329,7 @@ body {
   }
 .header__title {
   margin: 0;
-  color: #FFFFFF;
+  color: #fff;
   font-size: 1.80204em;
   letter-spacing: normal;
   line-height: 1.22
@@ -317,7 +340,7 @@ body {
   }
   }
 .header__title-link {
-  color: #FFFFFF;
+  color: #fff;
 }
 .header--small-mode {
 }
@@ -355,7 +378,7 @@ body {
   padding: 0.1em
     1em
     0.1em;
-  color: #E3120b;
+  color: #e3120b;
   font-size: 0.88889em;
   font-weight: normal;
   background-color: rgba(255, 255, 255, 0.6)
@@ -368,14 +391,15 @@ body {
 .header__text {
   vertical-align: middle;
   margin-top: 0;
-  color: #FFFFFF;
+  color: #fff;
   font-size: 1em;
   font-weight: 300;
   line-height: 1.35
 }
 @media (min-width: 36rem) {
   .header__text {
-    width: 100%; /* Fix for IE */
+    width: 100%;
+    /* Fix for IE */
   }
   }
 /* stylelint-disable selector-no-type */
